@@ -14,7 +14,7 @@ public class ConvertList2ArrayTest {
     public void when7ElementsThen9() {
         ConvertList2Array list = new ConvertList2Array();
         int[][] result = list.toArray(
-                Arrays.asList(1, 2, 3, 4, 5, 6, 7),
+                List.of(1, 2, 3, 4, 5, 6, 7),
                 3
         );
         int[][] expect = {
@@ -28,12 +28,12 @@ public class ConvertList2ArrayTest {
     @Test
     public void convertlist() {
         ConvertList2Array convertList = new ConvertList2Array();
-        List<int[]> list = new ArrayList<>();
-        list.add(new int[]{1, 2});
-        list.add(new int[]{3, 4, 5, 6});
+        List<int[]> list = List.of(
+        new int[]{1, 2},
+        new int[]{3, 4, 5, 6});
         List<Integer> result = convertList.convert(list);
 
-        List<Integer> expect =  Arrays.asList(1, 2, 3, 4, 5, 6);
+        List<Integer> expect =  List.of(1, 2, 3, 4, 5, 6);
                 // будет содержать элементы: (
 
 
